--- a/.github/workflows/run_daily.yml
+++ b/.github/workflows/run_daily.yml
@@ -1,7 +1,11 @@
 name: Daily Super Bot
 
-on:
-    push:
+on: 
+    workflow_dispatch:
+
+env:
+    TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+    TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
 
 jobs:
     Daily-Run:
@@ -9,4 +13,7 @@ jobs:
         steps:
             - name: Checkout Code
               uses: actions/checkout@v4
-
+            - name: Install Dependencies
+              run: pip install -r requirements.txt 
+            - name: Run App
+              run: python app.py
