--- a/.github/workflows/run_daily.yml
+++ b/.github/workflows/run_daily.yml
@@ -16,4 +16,4 @@ jobs:
             - name: Install Dependencies
               run: pip install -r requirements.txt 
             - name: Run App
-              run: python app.py
+              run: python app2.py
